<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblNome"
        android:id="@+id/textView6"
        android:layout_marginTop="85dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblCat"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="74dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblComb"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="73dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spCat"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/lblErroCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="110dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spComb"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/lblErroComb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="110dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNomeVeic"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/spCat"
        android:layout_alignStart="@+id/spCat" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveVec"
        android:layout_alignParentStart="true"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="110dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/save"
        android:contentDescription="@string/lblSalvar"
        android:contextClickable="true"
        android:labelFor="@string/lblSalvar"
        android:onClick="saveVec"/>
</RelativeLayout>